Install deps as user in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,7 @@ test-steps: &test-steps
   steps:
     - checkout
     - run: |
-        pip install -U pip setuptools wheel
-        pip install tox
+        pip install --user -U pip setuptools wheel tox
         tox
     - codecov/upload:
       file: {{ coverage_report_filepath }}
@@ -18,7 +17,7 @@ jobs:
     steps:
       - checkout
       - run: |
-          pip install -U pip setuptools wheel tox
+          pip install --user -U pip setuptools wheel tox
           tox -e isort,lint
     docker:
       - image: circleci/python:3.7
@@ -27,7 +26,7 @@ jobs:
     steps:
       - checkout
       - run: |
-          pip install -U pip setuptools wheel tox
+          pip install --user -U pip setuptools wheel tox
           python setup.py bdist_wheel
           tox -e dist --installpkg ./dist/tox_factor-*.whl
           tox -e dist
