--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ aliases:
       - *environ
       - run: venv/bin/tox
       - codecov/upload:
-        file: {{ coverage_report_filepath }}
+          file: .coverage
 
 jobs:
   lint:
