--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ known_first_party = tox_factor
 name = tox-factor
 version = 0.0.1
 description = Run tox testenvs that match a given factor
-long_description = file: README.md, CHANGELOG.md, LICENSE
+long_description = file: README.md, LICENSE
 long_description_content_type = text/markdown
 license = BSD 3-Clause License
 license_file = LICENSE
