--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py27,py34,py35,py36,py37,pypy
-    isort,lint,dist
+    py27,py34,py35,py36,py37,pypy,
+    dist,isort,lint,readme,
 
 [testenv]
 commands = coverage run -m unittest {posargs:discover}
@@ -11,6 +11,10 @@ setenv =
 deps =
     coverage
     mock
+
+[testenv:dist]
+commands = python -m unittest {posargs:discover}
+usedevelop = False
 
 [testenv:isort]
 commands = isort --check-only --recursive src {posargs}
@@ -26,6 +30,10 @@ deps =
     flake8-quotes
     darglint
 
-[testenv:dist]
-commands = python -m unittest {posargs:discover}
+[testenv:readme]
+commands =
+    python setup.py sdist bdist_wheel
+    twine check dist/*
 usedevelop = False
+deps =
+    twine
