--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =
 [testenv]
 commands = coverage run -m unittest {posargs:discover}
 usedevelop = True
+envdir={toxworkdir}/v/{envname}
 setenv =
     PYTHONDONTWRITEBYTECODE=1
 deps =
