--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ known_first_party = tox_factor
 
 [metadata]
 name = tox-factor
-version = 0.1.1
+version = 1.0.0
 description = Run tox testenvs that match a given factor
 long_description = file: README.md, LICENSE
 long_description_content_type = text/markdown
@@ -63,7 +63,7 @@ classifiers =
 
 [options]
 install_requires =
-    tox
+    tox>=3.14.1
 package_dir =
     =src
 packages = find:
