Add tests to lint checking

--- a/tox.ini
+++ b/tox.ini
@@ -18,12 +18,12 @@ commands = python -m unittest {posargs:discover}
 usedevelop = False
 
 [testenv:isort]
-commands = isort --check-only --recursive src {posargs}
+commands = isort --check-only --recursive src {posargs:--diff}
 deps =
     isort
 
 [testenv:lint]
-commands = flake8 src {posargs}
+commands = flake8 src tests {posargs}
 deps =
     flake8
     flake8-bugbear
