--- a/setup.cfg
+++ b/setup.cfg
@@ -16,15 +16,7 @@ max_complexity = 10
 
 
 [isort]
-skip = .tox
-atomic = true
-line_length = 90
-multi_line_output = 4
-include_trailing_comma = true
-known_standard_library = mock
-known_third_party = tox,py
-known_first_party = tox_factor
-
+profile = black
 
 [metadata]
 name = tox-factor
