--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands = python -m unittest {posargs:discover}
 usedevelop = False
 
 [testenv:isort]
-commands = isort --check-only --recursive src {posargs:--diff}
+commands = isort --check --diff src tests
 deps =
     isort
 
